--- a/style.css
+++ b/style.css
@@ -59,7 +59,8 @@ body{
     scroll-behavior: smooth
 }
 html{
-    scroll-behavior: smooth
+    scroll-behavior: smooth;
+    scroll-padding-top: 100px; 
 }
 header {
     position: relative;
