--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ header {
     margin: auto;
     background-color:#001D47;
     height: 70px;
+    z-index: 9999;
 }
 #home:before {
     content: '';
@@ -688,6 +689,7 @@ padding-left: 0;
     display: flex;
     flex-wrap: wrap;
     row-gap: 24px;
+    padding: 50px 10px;
 }
 .servicesgrid > .servicescard {
     flex: 50%; 
@@ -702,14 +704,12 @@ padding-left: 0;
 .servicescard img{
     width: 100%;
     height: fit-content;
-    max-width: fit-content;
+    max-width: 163px;
+    margin: auto;
 }
 .servicescard h2{
     margin-top: 19px;
     font-size: 15px;
-}
-#servicecard4 h2, #servicecard2 h2{
-    width: 109px;
 }
 .contractorlink{
     display: flex;
@@ -2031,6 +2031,97 @@ footer{
 }
 :root {
     --scroll: 0
+}
+.popuptest{
+    position: relative;
+    width: 100%;
+    max-width: 9999px;
+    margin: auto;    
+    background-color: #fff;
+    padding: 50px 50px 0;
+}
+.popupgrid{
+    display: flex;
+    width: 100%;
+    max-width: 1400px;
+    margin: auto;
+    justify-content: center;
+}
+.popup .content{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    max-width: 880px;
+    z-index: 99;
+    gap: 20px;
+    padding: 100px 30px 0px 30px;
+    color: #002A68;
+}
+.content img{
+    width: 100%;
+    max-width: 700px;
+    margin: auto;
+    flex-shrink: 1;
+}
+.content a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    padding: 8px 6px;
+    color:#002A68;
+    background-color: #FFBE50;
+    border-radius: 72px;
+    width:180px;
+}
+.content a:hover{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    padding: 8px 6px;
+    color:#FFBE50;
+    background-color: #002A68;
+    border-radius: 72px;
+    width:180px;
+}
+.content a{
+    color: inherit;
+    display: flex;
+    font-size: 14px;
+    font-weight: 800;
+    gap: 9px;
+    line-height: 100%;
+    align-items: center;
+    text-decoration: none; 
+}
+.popup .content .popttlbtn{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.callnowpopup{
+    margin-left: 0;
+}
+.popup.active .overlay{display: block;}
+.popup.active .content{
+    transition: all 0.3s ease-in-out;
+    transform: translate(-50%, -50%) scale(1);
+}
+.popup .content h1{
+    font-size: 32px;
+}
+.popup .content p{
+    max-width: 700px;
+    font-size: 16px;
+    line-height: 150%;
+}
+@media screen and (max-width:800px) {
+    .popuptest{padding: 0 0 30px;}
+    
 }
 .btn1:hover{
     background-color: #FFF;
