--- a/css/style.css
+++ b/css/style.css
@@ -321,9 +321,9 @@ header {
     background-size: 100%;
     background-color: #001e47de;
     z-index: 9;
-    padding-bottom: 40px;
+    padding-bottom: 0px;
 }
-.postercontainer::after {
+/* .postercontainer::after {
     content: '';
     inset: 0;
     background-image: url(../assets/Vector5.png);
@@ -332,7 +332,7 @@ header {
     background-position: bottom;
     bottom: -2px;
     position: absolute;
-}
+} */
 .bgposter{
     display: block;
     width: 100%;
@@ -342,6 +342,8 @@ header {
     width: 100%;
     max-width: 9999px;
     margin: auto;
+    max-height: 450px;
+    object-position: bottom;
     z-index: 0;
     object-fit: cover;
 }
@@ -961,8 +963,8 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-right: 0;
-    padding-left: 0;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 .mission h3{
     width: 252px;
@@ -1384,7 +1386,6 @@ header {
     font-size: 28px;
     font-weight: 400;
     line-height: 130%; /* 31.2px */
-    margin-bottom: 40px;
 }
 .preferencegrid{
     width: 100%;
