--- a/css/style.css
+++ b/css/style.css
@@ -11,36 +11,6 @@
     font-weight: normal;
     font-style: normal;
   }
-/*  @font-face {
-    font-family: 'Urbanist';
-    src: 
-    local('Urbanist');
-    src: url('Urbanist[wght].ttf') format('truetype');
-    src: url('Urbanist-Regular.ttf') format('truetype');
-    src: url('Urbanist-Black.ttf') format('truetype');
-    src: url('Urbanist-Black.otf') format('embedded-opentype'),
-         url('Urbanist-Black.woff2') format('woff'),
-         url('Urbanist-Regular.woff2') format('woff2');
-  }
-  @font-face {
-    font-family: 'Outfit';
-    src: 
-    local('Outfit');
-    src: url('Outfit-Black.ttf') format('truetype');
-    src: url('Outfit-Bold.ttf') format('truetype');
-    src: url('Outfit-ExtraBold.ttf') format('truetype');
-    src: url('Outfit-ExtraLight.ttf') format('truetype');
-    src: url('Outfit-Light.ttf') format('truetype');
-    src: url('Outfit-Medium.ttf') format('truetype');
-    src: url('Outfit-SemiBold.ttf') format('truetype');
-    src: url('Outfit-Thin.ttf') format('truetype');
-    src: url('Outfit-Regular.ttf') format('truetype');
-    src: url('Outfit[wght].ttf') format('truetype');
-    src: url('Urbanist-Black.ttf') format('truetype');
-    src: url('Outfit-Regular.otf') format('embedded-opentype'),
-         url('Outfit-Regular.woff') format('woff'),
-         url('Outfit-Regular.woff2') format('woff2');
-  } */
   @font-face {
     font-family: 'Calibri';
     src: url(../calibri-regular.ttf) format('truetype');
@@ -304,10 +274,13 @@ header {
   .imgbarm{
     display: block;
     position: absolute;
-    top: 0;
-    left: 25px;
+    top: 5px;
+    left: 15px;
     width: 70px;
     z-index: 99;
+  }
+  .logo-header{
+      max-width: 75px;
   }
   .callm{
     display: flex;
